// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package newsrpc;

// 生成 golang 代码后的包名
option go_package = "./newsrpc";

/************** 通用消息 **************/
// 分页请求参数
message PageReq {
  int64 page = 1;      // 页码
  int64 page_size = 2; // 每页大小
  repeated string sorts = 3; // 排序字段
}

// 分页响应参数
message PageResp {
  int64 page = 1;      // 页码
  int64 page_size = 2; // 每页大小
  int64 total = 3;     // 总数
}

/************** 基础消息 **************/
// 聊天记录信息
message Chat {
  int64 id = 1;// 主键
  string user_id = 2;// 用户id
  string terminal_id = 3;// 设备id
  string ip_address = 4;// ip地址
  string ip_source = 5;// ip归属地
  string nickname = 6;// 昵称
  string avatar = 7;// 头像
  string type = 8;// 类型
  string content = 9;// 聊天内容
  int64 status = 10;// 状态
  int64 created_at = 11;// 创建时间
  int64 updated_at = 12;// 更新时间
}

// 留言信息
message Message {
  int64 id = 1;// 主键id
  string user_id = 2;// 用户id
  string terminal_id = 3;// 终端id
  string message_content = 4;// 留言内容
  int64 status = 5; // 状态
  int64 created_at = 9;// 发布时间
  int64 updated_at = 10;// 更新时间
}

// 评论信息
message Comment {
  int64 id = 1;// 主键
  string user_id = 2;// 评论用户id
  string terminal_id = 3;// 终端id
  int64 topic_id = 4;// 主题id
  int64 parent_id = 5;// 父评论id
  int64 reply_id = 6;// 回复评论id
  string reply_user_id = 7;// 评论回复用户id
  string comment_content = 8;// 评论内容
  int64 type = 9;// 评论类型
  int64 status = 10;// 状态
  int64 created_at = 12;// 评论时间
  int64 updated_at = 13;// 更新时间
  int64 like_count = 14;// 点赞数
}

/************** 聊天记录 ***************/
message AddChatReq {
  int64 id = 1;// 主键
  string user_id = 2;// 用户id
  string terminal_id = 3;// 设备id
  string ip_address = 4;// ip地址
  string ip_source = 5;// ip归属地
  string nickname = 6;// 昵称
  string avatar = 7;// 头像
  string type = 8;// 类型
  string content = 9;// 聊天内容
  int64 status = 10;// 状态
}

message AddChatResp {
  Chat chat = 1;
}

message UpdateChatReq{
  int64 id = 1;// 主键
  string user_id = 2;// 用户id
  string terminal_id = 3;// 设备id
  string ip_address = 4;// ip地址
  string ip_source = 5;// ip归属地
  string nickname = 6;// 昵称
  string avatar = 7;// 头像
  string type = 8;// 类型
  string content = 9;// 聊天内容
  int64 status = 10;// 状态
}

message UpdateChatResp {
  Chat chat = 1;
}

message GetChatReq {
  int64 id = 1; // 主键
}

message GetChatResp {
  Chat chat = 1;
}

message DeletesChatReq {
  repeated int64 ids = 1; // id列表
}

message DeletesChatResp {
  int64 success_count = 1; // 成功数量
}

message FindChatListReq {
  int64 after = 1;
  int64 before = 2;
  int64 limit = 3;
  string user_id = 4;// 用户id
  string type = 5;// 类型
  string content = 6;// 聊天内容
  int64 status = 7;// 状态
}

message FindChatListResp {
  PageResp pagination = 1; // 分页信息
  repeated Chat list = 2;
}

/************** 留言 **************/
message AddMessageReq {
  int64 id = 1;// 主键id
  string user_id = 2;// 用户id
  string terminal_id = 3;// 终端id
  string message_content = 4;// 留言内容
  int64 status = 5; // 状态
}

message AddMessageResp {
  Message message = 1;
}

message UpdateMessageReq {
  int64 id = 1;// 主键id
  string user_id = 2;// 用户id
  string terminal_id = 3;// 终端id
  string message_content = 4;// 留言内容
  int64 status = 5; // 状态
}

message UpdateMessageResp {
  Message message = 1;
}

message GetMessageReq {
  int64 id = 1; // 主键id
}

message GetMessageResp {
  Message message = 1;
}

message DeletesMessageReq {
  repeated int64 ids = 1; // id列表
}

message DeletesMessageResp {
  int64 success_count = 1; // 成功数量
}

message FindMessageListReq {
  PageReq paginate = 1;    // 分页参数
  string user_id = 2;// 用户ID
  int64 status = 4;// 状态
}

message FindMessageListResp {
  PageResp pagination = 1; // 分页信息
  repeated Message list = 2;
}

message UpdateMessageStatusReq{
  repeated int64 ids = 1;// 主键
  int64 status = 2;// 状态
}

message UpdateMessageStatusResp {
  int64 success_count = 1; // 成功数量
}

/************** 消息管理（评论） **************/
message AddCommentReq {
  int64 id = 1;// 主键
  string user_id = 2;// 评论用户id
  string terminal_id = 3;// 终端id
  int64 topic_id = 4;// 主题id
  int64 parent_id = 5;// 父评论id
  int64 reply_id = 6;// 回复评论id
  string reply_user_id = 7;// 评论回复用户id
  string comment_content = 8;// 评论内容
  int64 type = 9;// 评论类型
  int64 status = 10;// 状态
}

message AddCommentResp {
  Comment comment = 1;
}

message UpdateCommentReq {
  int64 id = 1;// 主键
  string user_id = 2;// 评论用户id
  string terminal_id = 3;// 终端id
  int64 topic_id = 4;// 主题id
  int64 parent_id = 5;// 父评论id
  int64 reply_id = 6;// 回复评论id
  string reply_user_id = 7;// 评论回复用户id
  string comment_content = 8;// 评论内容
  int64 type = 9;// 评论类型
  int64 status = 10;// 状态
}

message UpdateCommentResp {
  Comment comment = 1;
}

message GetCommentReq {
  int64 id = 1; // 主键
}

message GetCommentResp {
  Comment comment = 1;
}

message DeletesCommentReq {
  repeated int64 ids = 1; // id列表
}

message DeletesCommentResp {
  int64 success_count = 1; // 成功数量
}

message UpdateCommentStatusReq{
  repeated int64 ids = 1;// 主键
  int64 status = 2;// 状态
}

message UpdateCommentStatusResp {
  int64 success_count = 1; // 成功数量
}

message FindCommentListReq {
  PageReq paginate = 1;    // 分页参数
  string user_id = 2;// 用户ID
  int64 status = 3;// 状态
  int64 type = 4;// 评论类型
}

message FindCommentListResp {
  PageResp pagination = 1; // 分页信息
  repeated Comment list = 2;
}

message FindCommentReplyListReq {
  PageReq paginate = 1;    // 分页参数
  int64 topic_id = 2;// 主题id
  int64 parent_id = 3;// 父评论id
  int64 reply_id = 4;// 回复评论id
  int64 type = 5;// 评论类型
}

message FindCommentReplyListResp {
  PageResp pagination = 1; // 分页信息
  repeated Comment list = 2;
}

message FindLikeCommentResp{
  repeated int64 like_comment_list = 1;
}

message FindCommentReplyCountsReq{
  repeated int64 topic_ids = 1;
}

message FindCommentReplyCountsResp{
  map<int64, int64> topic_comment_counts = 1;
}

message LikeCommentReq {
  int64 id = 1; // 评论id
}

message LikeCommentResp {
}

message FindUserLikeCommentReq {
  string user_id = 1;
}

/************** 数据分析 **************/
message AnalysisMessageReq {
}

message AnalysisMessageResp {
  int64 message_count = 1;
}

// 消息服务
service NewsRpc {
  // 消息数据分析
  rpc AnalysisMessage(AnalysisMessageReq) returns(AnalysisMessageResp);

  // 创建聊天记录
  rpc AddChat(AddChatReq) returns(AddChatResp);
  // 更新聊天记录
  rpc UpdateChat(UpdateChatReq) returns(UpdateChatResp);
  // 查询聊天记录
  rpc GetChat(GetChatReq) returns(GetChatResp);
  // 删除聊天记录
  rpc DeletesChat(DeletesChatReq) returns(DeletesChatResp);
  // 查询聊天记录列表
  rpc FindChatList(FindChatListReq) returns(FindChatListResp);

  // 创建留言
  rpc AddMessage(AddMessageReq) returns(AddMessageResp);
  // 更新留言
  rpc UpdateMessage(UpdateMessageReq) returns(UpdateMessageResp);
  // 查询留言
  rpc GetMessage(GetMessageReq) returns(GetMessageResp);
  // 删除留言
  rpc DeletesMessage(DeletesMessageReq) returns(DeletesMessageResp);
  // 查询留言列表
  rpc FindMessageList(FindMessageListReq) returns(FindMessageListResp);
  // 更新留言状态
  rpc UpdateMessageStatus(UpdateMessageStatusReq) returns(UpdateMessageStatusResp);

  // 创建评论
  rpc AddComment(AddCommentReq) returns(AddCommentResp);
  // 更新评论
  rpc UpdateComment(UpdateCommentReq) returns(UpdateCommentResp);
  // 查询评论
  rpc GetComment(GetCommentReq) returns(GetCommentResp);
  // 删除评论
  rpc DeletesComment(DeletesCommentReq) returns(DeletesCommentResp);
  // 查询评论列表
  rpc FindCommentList(FindCommentListReq) returns(FindCommentListResp);
  // 查询评论回复列表
  rpc FindCommentReplyList(FindCommentReplyListReq) returns(FindCommentReplyListResp);
  // 查询评论回复数量
  rpc FindCommentReplyCounts(FindCommentReplyCountsReq) returns(FindCommentReplyCountsResp);
  // 更新评论状态
  rpc UpdateCommentStatus(UpdateCommentStatusReq) returns(UpdateCommentStatusResp);

  // 点赞评论
  rpc LikeComment(LikeCommentReq) returns(LikeCommentResp);
  // 用户点赞的评论
  rpc FindUserLikeComment(FindUserLikeCommentReq) returns(FindLikeCommentResp);
}